[package]
name = "raster_runtime"
version = "0.8.1-beta"
edition = "2021"
license-file = "LICENSE"

[features]
default = ["macro", "tls-ring", "crypto-rust"]
macro = ["raster_runtime_core/macro"]
uncompressed = ["raster_runtime_core/uncompressed"]
bindgen = ["raster_runtime_core/bindgen"]

# TLS crypto backend features
tls-ring = ["raster_runtime_core/tls-ring"]
tls-aws-lc = ["raster_runtime_core/tls-aws-lc"]
tls-graviola = ["raster_runtime_core/tls-graviola"]
tls-openssl = ["raster_runtime_core/tls-openssl"]

# Crypto provider features
crypto-rust = ["raster_runtime_core/crypto-rust"]
crypto-ring = ["raster_runtime_core/crypto-ring"]
crypto-ring-rust = ["raster_runtime_core/crypto-ring-rust"]
crypto-graviola = ["raster_runtime_core/crypto-graviola"]
crypto-graviola-rust = ["raster_runtime_core/crypto-graviola-rust"]
crypto-openssl = ["raster_runtime_core/crypto-openssl"]

# OpenSSL vendored (builds OpenSSL from source)
openssl-vendored = ["raster_runtime_core/openssl-vendored"]

[dependencies]
constcat = { version = "0.6", default-features = false }
crossterm = { version = "0.29", features = [
  "events",
  "windows",
], default-features = false }
jiff = { version = "0.2" }
raster_runtime_core = { path = "../raster_runtime_core", default-features = false }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
], default-features = false }
tracing = { version = "0.1", features = ["log"], default-features = false }
tracing-core = { version = "0.1", default-features = false }

[target.'cfg(not(target_os = "windows"))'.dependencies]
snmalloc-rs = { version = "0.7", features = [
  "default",
  "lto",
], default-features = false }

[target.'cfg(target_env = "musl")'.dependencies]
libc = "0.2"

[dev-dependencies]
raster_runtime_test = { version = "0.8.1-beta", path = "../libs/raster_runtime_test" }

[[bin]]
name = "raster_runtime"
path = "src/main.rs"
