[package]
name = "raster_runtime_core"
version = "0.8.1-beta"
edition = "2021"
license-file = "LICENSE"

[features]
default = ["macro", "tls-ring", "crypto-rust"]
uncompressed = []
macro = ["rquickjs/macro"]
bindgen = ["rquickjs/bindgen"]

# TLS crypto backend features
tls-ring = ["rustls/ring", "raster_runtime_modules/tls-ring"]
tls-aws-lc = ["rustls/aws_lc_rs", "raster_runtime_modules/tls-aws-lc"]
tls-graviola = ["raster_runtime_modules/tls-graviola"]
tls-openssl = ["raster_runtime_modules/tls-openssl", "dep:openssl"]

# Crypto provider features
crypto-rust = ["raster_runtime_modules/crypto-rust"]
crypto-ring = ["raster_runtime_modules/crypto-ring"]
crypto-ring-rust = ["raster_runtime_modules/crypto-ring-rust"]
crypto-graviola = ["raster_runtime_modules/crypto-graviola"]
crypto-graviola-rust = ["raster_runtime_modules/crypto-graviola-rust"]
crypto-openssl = ["raster_runtime_modules/crypto-openssl"]

# OpenSSL vendored (builds OpenSSL from source)
openssl-vendored = ["openssl/vendored"]

[dependencies]
bytes = { version = "1", default-features = false }
home = { version = "0.5", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", default-features = false }
itoa = { version = "1", default-features = false }
jiff = { version = "0.2" }
libc = { version = "0.2", default-features = false }
raster_runtime_context = { path = "../libs/raster_runtime_context" }
raster_runtime_encoding = { path = "../libs/raster_runtime_encoding" }
raster_runtime_hooking = { path = "../libs/raster_runtime_hooking" }
raster_runtime_json = { path = "../libs/raster_runtime_json" }
raster_runtime_logging = { path = "../libs/raster_runtime_logging" }
raster_runtime_modules = { path = "../raster_runtime_modules", default-features = false, features = [
  "base",
  "console",
] }
raster_runtime_numbers = { path = "../libs/raster_runtime_numbers" }
raster_runtime_utils = { path = "../libs/raster_runtime_utils", features = ["all"] }
once_cell = { version = "1", features = ["std"], default-features = false }
phf = { version = "0.13", default-features = false }
quick-xml = { version = "0.40", default-features = false }
rand = { version = "0.10.1", features = [
  "alloc",
  "thread_rng",
], default-features = false }
rquickjs = { version = "0.11", git = "https://github.com/DelSkayn/rquickjs", features = [
  "futures",
  "parallel",
  "rust-alloc",
], default-features = false }
rustls = { version = "0.23", features = ["tls12"], default-features = false }
rustls-pemfile = { version = "2", features = ["std"], default-features = false }
ryu = { version = "1", default-features = false }
simd-json = { version = "0.17", default-features = false }
terminal_size = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["sync", "time"], default-features = false }
tracing = { version = "0.1", features = ["log"], default-features = false }
zstd = { version = "0.13", default-features = false }
openssl = { version = "0.10", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
md-5 = { version = "0.11.0", default-features = false }
[target.'cfg(not(target_os = "windows"))'.dependencies]
md-5 = { version = "0.11.0", default-features = false }

[build-dependencies]
rquickjs = { version = "0.11", git = "https://github.com/DelSkayn/rquickjs", default-features = false }
phf_codegen = { version = "0.13", default-features = false }
raster_runtime_build = { path = "../libs/raster_runtime_build" }
uuid = { version = "1", features = ["v4"], default-features = false }
walkdir = { version = "2", default-features = false }

[dev-dependencies]
wiremock = { version = "0.6", default-features = false }
raster_runtime_test = { path = "../libs/raster_runtime_test" }
