[package]
name = "raster_runtime_core"
version = "0.8.1-beta"
edition = "2021"
license-file = "LICENSE"

[features]
default = ["macro", "tls-ring", "crypto-rust"]
uncompressed = []
macro = ["rquickjs/macro"]
bindgen = ["rquickjs/bindgen"]

# Node.js-compatible module feature forwards
base = ["raster_runtime_modules/base", "console"]
abort = ["raster_runtime_modules/abort"]
assert = ["raster_runtime_modules/assert"]
async-hooks = ["raster_runtime_modules/async-hooks"]
buffer = ["raster_runtime_modules/buffer"]
child-process = ["raster_runtime_modules/child-process"]
console = ["raster_runtime_modules/console"]
crypto = ["raster_runtime_modules/crypto"]
dgram = ["raster_runtime_modules/dgram"]
dns = ["raster_runtime_modules/dns"]
events = ["raster_runtime_modules/events"]
exceptions = ["raster_runtime_modules/exceptions"]
fetch = ["raster_runtime_modules/fetch"]
fs = ["raster_runtime_modules/fs"]
http = ["raster_runtime_modules/http"]
https = ["raster_runtime_modules/https"]
intl = ["raster_runtime_modules/intl"]
navigator = ["raster_runtime_modules/navigator"]
net = ["raster_runtime_modules/net"]
os = ["raster_runtime_modules/os"]
path = ["raster_runtime_modules/path"]
perf-hooks = ["raster_runtime_modules/perf-hooks"]
process = ["raster_runtime_modules/process"]
stream-web = ["raster_runtime_modules/stream-web"]
string-decoder = ["raster_runtime_modules/string-decoder"]
temporal = ["raster_runtime_modules/temporal"]
timers = ["raster_runtime_modules/timers"]
tls = ["raster_runtime_modules/tls"]
tty = ["raster_runtime_modules/tty"]
url = ["raster_runtime_modules/url"]
util = ["raster_runtime_modules/util"]
zlib = ["raster_runtime_modules/zlib"]
compression-c = ["raster_runtime_modules/compression-c"]
compression-rust = ["raster_runtime_modules/compression-rust"]

# TLS crypto backend features
tls-ring = ["rustls/ring", "raster_runtime_modules/tls-ring"]
tls-aws-lc = ["rustls/aws_lc_rs", "raster_runtime_modules/tls-aws-lc"]
tls-graviola = ["raster_runtime_modules/tls-graviola"]
tls-openssl = ["raster_runtime_modules/tls-openssl", "dep:openssl"]

# Crypto provider features
crypto-rust = ["raster_runtime_modules/crypto-rust"]
crypto-ring = ["raster_runtime_modules/crypto-ring"]
crypto-ring-rust = ["raster_runtime_modules/crypto-ring-rust"]
crypto-graviola = ["raster_runtime_modules/crypto-graviola"]
crypto-graviola-rust = ["raster_runtime_modules/crypto-graviola-rust"]
crypto-openssl = ["raster_runtime_modules/crypto-openssl"]

# OpenSSL vendored (builds OpenSSL from source)
openssl-vendored = ["openssl/vendored"]

[dependencies]
bytes = { version = "1", default-features = false }
home = { version = "0.5", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", default-features = false }
itoa = { version = "1", default-features = false }
jiff = { version = "0.2" }
libc = { version = "0.2", default-features = false }
raster_runtime_context = { path = "../libs/raster_runtime_context" }
raster_runtime_encoding = { path = "../libs/raster_runtime_encoding" }
raster_runtime_hooking = { path = "../libs/raster_runtime_hooking" }
raster_runtime_json = { path = "../libs/raster_runtime_json" }
raster_runtime_logging = { path = "../libs/raster_runtime_logging" }
raster_runtime_modules = { path = "../raster_runtime_modules", default-features = false }
raster_runtime_numbers = { path = "../libs/raster_runtime_numbers" }
raster_runtime_utils = { path = "../libs/raster_runtime_utils", features = ["all"] }
once_cell = { version = "1", features = ["std"], default-features = false }
phf = { version = "0.13", default-features = false }
quick-xml = { version = "0.40", default-features = false }
rand = { version = "0.10.1", features = [
  "alloc",
  "thread_rng",
], default-features = false }
rquickjs = { version = "0.11", git = "https://github.com/DelSkayn/rquickjs", features = [
  "futures",
  "parallel",
  "rust-alloc",
], default-features = false }
rustls = { version = "0.23", features = ["tls12"], default-features = false }
rustls-pemfile = { version = "2", features = ["std"], default-features = false }
ryu = { version = "1", default-features = false }
simd-json = { version = "0.17", default-features = false }
terminal_size = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["sync", "time"], default-features = false }
tracing = { version = "0.1", features = ["log"], default-features = false }
zstd = { version = "0.13", default-features = false }
openssl = { version = "0.10", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
md-5 = { version = "0.11.0", default-features = false }
[target.'cfg(not(target_os = "windows"))'.dependencies]
md-5 = { version = "0.11.0", default-features = false }

[build-dependencies]
rquickjs = { version = "0.11", git = "https://github.com/DelSkayn/rquickjs", default-features = false }
phf_codegen = { version = "0.13", default-features = false }
raster_runtime_build = { path = "../libs/raster_runtime_build" }
uuid = { version = "1", features = ["v4"], default-features = false }
walkdir = { version = "2", default-features = false }

[dev-dependencies]
wiremock = { version = "0.6", default-features = false }
raster_runtime_test = { path = "../libs/raster_runtime_test" }
