[package]
name = "raster_runtime_modules"
description = "raster_runtime Modules for rquickjs"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"
readme = "README.md"

[features]
default = ["base", "console", "tls-ring", "crypto-rust"]

# TLS crypto backend features
tls-ring = ["raster_runtime_http?/tls-ring", "raster_runtime_tls?/tls-ring", "raster_runtime_fetch?/tls-ring"]
tls-aws-lc = [
  "raster_runtime_http?/tls-aws-lc",
  "raster_runtime_tls?/tls-aws-lc",
  "raster_runtime_fetch?/tls-aws-lc",
]
tls-graviola = [
  "raster_runtime_http?/tls-graviola",
  "raster_runtime_tls?/tls-graviola",
  "raster_runtime_fetch?/tls-graviola",
]
tls-openssl = ["raster_runtime_http?/tls-openssl", "raster_runtime_tls?/tls-openssl"]

# Crypto provider features
crypto-rust = ["raster_runtime_crypto?/crypto-rust"]
crypto-ring = ["raster_runtime_crypto?/crypto-ring"]
crypto-ring-rust = ["raster_runtime_crypto?/crypto-ring-rust"]
crypto-graviola = ["raster_runtime_crypto?/crypto-graviola"]
crypto-graviola-rust = ["raster_runtime_crypto?/crypto-graviola-rust"]
crypto-openssl = ["raster_runtime_crypto?/crypto-openssl"]

# OpenSSL vendored (builds OpenSSL from source)
openssl-vendored = ["dep:openssl", "openssl/vendored"]

base = [
  "abort",
  "assert",
  "async-hooks",
  "buffer",
  "child-process",
  "crypto",
  "dgram",
  "diagnostics-channel",
  "querystring",
  "dns",
  "events",
  "exceptions",
  "fetch",
  "fs",
  "http",
  "https",
  "intl",
  "navigator",
  "net",
  "os",
  "path",
  "perf-hooks",
  "process",
  "stream-web",
  "string-decoder",
  "temporal",
  "timers",
  "tls",
  "tty",
  "url",
  "util",
  "vm",
  "zlib",
]


# Modules
abort = ["raster_runtime_abort"]
assert = ["raster_runtime_assert"]
async-hooks = ["raster_runtime_async_hooks"]
buffer = ["raster_runtime_buffer"]
child-process = ["raster_runtime_child_process"]
console = ["raster_runtime_console"]
crypto = ["raster_runtime_crypto"]
dgram = ["raster_runtime_dgram"]
diagnostics-channel = ["raster_runtime_diagnostics_channel"]
querystring = ["raster_runtime_querystring"]
dns = ["raster_runtime_dns"]
events = ["raster_runtime_events"]
exceptions = ["raster_runtime_exceptions"]
fetch = [
  "raster_runtime_fetch",
  "raster_runtime_fetch?/http1",
  "raster_runtime_fetch?/http2",
  "raster_runtime_fetch?/compression-c",
  "raster_runtime_fetch?/webpki-roots",
]
compression-c = ["raster_runtime_fetch?/compression-c", "raster_runtime_zlib?/compression-c"]
compression-rust = [
  "raster_runtime_fetch?/compression-rust",
  "raster_runtime_zlib?/compression-rust",
]
fs = ["raster_runtime_fs"]
http = ["raster_runtime_http", "raster_runtime_http?/http1"]
https = [
  "raster_runtime_http",
  "raster_runtime_http?/webpki-roots",
  "raster_runtime_http?/http1",
  "raster_runtime_http?/http2",
]
intl = ["raster_runtime_intl"]
navigator = ["raster_runtime_navigator"]
net = ["raster_runtime_net"]
os = ["raster_runtime_os/default"]
path = ["raster_runtime_path"]
process = ["raster_runtime_process"]
perf-hooks = ["raster_runtime_perf_hooks"]
stream-web = ["raster_runtime_stream_web"]
string-decoder = ["raster_runtime_string_decoder"]
temporal = ["raster_runtime_temporal"]
timers = ["raster_runtime_timers"]
tls = ["raster_runtime_tls"]
tty = ["raster_runtime_tty"]
url = ["raster_runtime_url"]
util = ["raster_runtime_util"]
vm = ["raster_runtime_vm"]
zlib = ["raster_runtime_zlib"]

[dependencies]
home = { version = "0.5", default-features = false }
raster_runtime_hooking = { path = "../libs/raster_runtime_hooking" }
raster_runtime_json = { path = "../libs/raster_runtime_json" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../libs/raster_runtime_utils" }
once_cell = { version = "1", features = ["std"], default-features = false }
rquickjs = { version = "=0.12.1", features = ["loader", "std"], default-features = false }
simd-json = { version = "0.17", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }

# Optional
raster_runtime_abort = { version = "0.8.1-beta", path = "../modules/raster_runtime_abort", optional = true }
raster_runtime_assert = { version = "0.8.1-beta", path = "../modules/raster_runtime_assert", optional = true }
raster_runtime_async_hooks = { version = "0.8.1-beta", path = "../modules/raster_runtime_async_hooks", optional = true }
raster_runtime_buffer = { version = "0.8.1-beta", path = "../modules/raster_runtime_buffer", optional = true }
raster_runtime_child_process = { version = "0.8.1-beta", path = "../modules/raster_runtime_child_process", optional = true }
raster_runtime_console = { version = "0.8.1-beta", path = "../modules/raster_runtime_console", optional = true }
raster_runtime_crypto = { version = "0.8.1-beta", path = "../modules/raster_runtime_crypto", default-features = false, optional = true }
raster_runtime_dgram = { version = "0.8.1-beta", path = "../modules/raster_runtime_dgram", optional = true }
raster_runtime_diagnostics_channel = { version = "0.8.1-beta", path = "../modules/raster_runtime_diagnostics_channel", optional = true }
raster_runtime_querystring = { version = "0.8.1-beta", path = "../modules/raster_runtime_querystring", optional = true }
raster_runtime_dns = { version = "0.8.1-beta", path = "../modules/raster_runtime_dns", optional = true }
raster_runtime_events = { version = "0.8.1-beta", path = "../modules/raster_runtime_events", optional = true }
raster_runtime_exceptions = { version = "0.8.1-beta", path = "../modules/raster_runtime_exceptions", optional = true }
raster_runtime_fetch = { version = "0.8.1-beta", path = "../modules/raster_runtime_fetch", default-features = false, optional = true }
raster_runtime_fs = { version = "0.8.1-beta", path = "../modules/raster_runtime_fs", optional = true }
raster_runtime_http = { version = "0.8.1-beta", path = "../modules/raster_runtime_http", default-features = false, optional = true }
raster_runtime_intl = { version = "0.8.1-beta", path = "../modules/raster_runtime_intl", optional = true }
raster_runtime_navigator = { version = "0.8.1-beta", path = "../modules/raster_runtime_navigator", optional = true }
raster_runtime_net = { version = "0.8.1-beta", path = "../modules/raster_runtime_net", optional = true }
raster_runtime_os = { version = "0.8.1-beta", path = "../modules/raster_runtime_os", optional = true }
raster_runtime_path = { version = "0.8.1-beta", path = "../modules/raster_runtime_path", optional = true }
raster_runtime_process = { version = "0.8.1-beta", path = "../modules/raster_runtime_process", optional = true }
raster_runtime_perf_hooks = { version = "0.8.1-beta", path = "../modules/raster_runtime_perf_hooks", optional = true }
raster_runtime_stream_web = { version = "0.8.1-beta", path = "../modules/raster_runtime_stream_web", optional = true }
raster_runtime_string_decoder = { version = "0.8.1-beta", path = "../modules/raster_runtime_string_decoder", optional = true }
raster_runtime_temporal = { version = "0.8.1-beta", path = "../modules/raster_runtime_temporal", optional = true }
raster_runtime_timers = { version = "0.8.1-beta", path = "../modules/raster_runtime_timers", optional = true }
raster_runtime_tls = { version = "0.8.1-beta", path = "../modules/raster_runtime_tls", default-features = false, optional = true }
raster_runtime_tty = { version = "0.8.1-beta", path = "../modules/raster_runtime_tty", optional = true }
raster_runtime_url = { version = "0.8.1-beta", path = "../modules/raster_runtime_url", optional = true }
openssl = { version = "0.10", optional = true }
raster_runtime_util = { version = "0.8.1-beta", path = "../modules/raster_runtime_util", optional = true }
raster_runtime_vm = { version = "0.8.1-beta", path = "../modules/raster_runtime_vm", optional = true }
raster_runtime_zlib = { version = "0.8.1-beta", path = "../modules/raster_runtime_zlib", optional = true }

[dev-dependencies]
raster_runtime_test = { path = "../libs/raster_runtime_test" }
tokio = { version = "1", features = ["macros", "rt"] }
