[package]
name = "raster_runtime_dns_cache"
description = "raster_runtime dns cache helpers"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"
readme = "README.md"

[lib]
name = "raster_runtime_dns_cache"
path = "src/lib.rs"

[dependencies]
hyper-util = { version = "0.1", features = [
  "client",
  "client-legacy",
], default-features = false }
raster_runtime_context = { version = "0.8.1-beta", path = "../raster_runtime_context" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../raster_runtime_utils", default-features = false }
tokio = { version = "1", features = ["net"], default-features = false }
tower-service = { version = "0.3", default-features = false }
quick_cache = { version = "0.6", default-features = false }
