[package]
name = "raster_runtime_encoding"
description = "raster_runtime encoding helpers"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[dependencies]
base64-simd = { version = "0.8", features = [
    "alloc",
], default-features = false }
hex-simd = { version = "0.8", features = ["alloc"], default-features = false }
phf = { version = "0.13", features = ["macros"], default-features = false }
memchr = { version = "2", default-features = false }

[build-dependencies]
raster_runtime_build = { version = "0.8.1-beta", path = "../raster_runtime_build" }
