[package]
name = "raster_runtime_json"
description = "raster_runtime json helpers"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_json"
path = "src/lib.rs"

[dependencies]
itoa = { version = "1", default-features = false }
raster_runtime_utils = { version = "0.8.1-beta", path = "../raster_runtime_utils", default-features = false }
rquickjs = { version = "=0.12.1", default-features = false }
ryu = { version = "1", default-features = false }
simd-json = { version = "0.17", features = [
    "big-int-as-float",
], default-features = false }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
raster_runtime_test = { version = "0.8.1-beta", path = "../raster_runtime_test" }
tokio = { version = "1", features = ["test-util"], default-features = false }

[build-dependencies]
raster_runtime_build = { version = "0.8.1-beta", path = "../raster_runtime_build" }

[[bench]]
name = "json"
harness = false
