[package]
name = "raster_runtime_logging"
description = "raster_runtime logging helpers"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_logging"
path = "src/lib.rs"

[dependencies]
itoa = { version = "1", default-features = false }
raster_runtime_context = { version = "0.8.1-beta", path = "../raster_runtime_context" }
raster_runtime_encoding = { version = "0.8.1-beta", path = "../raster_runtime_encoding" }
raster_runtime_json = { version = "0.8.1-beta", path = "../raster_runtime_json" }
raster_runtime_numbers = { version = "0.8.1-beta", path = "../raster_runtime_numbers" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../raster_runtime_utils", default-features = false }
rquickjs = { version = "=0.12.1", default-features = false }
ryu = { version = "1", default-features = false }
