[package]
name = "raster_runtime_numbers"
description = "raster_runtime numbers helpers"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_numbers"
path = "src/lib.rs"

[dependencies]
itoa = { version = "1", default-features = false }
raster_runtime_utils = { version = "0.8.1-beta", path = "../raster_runtime_utils", default-features = false }
rquickjs = { version = "=0.12.1", default-features = false }
ryu = { version = "1", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
raster_runtime_test = { version = "0.8.1-beta", path = "../raster_runtime_test" }
rand = { version = "0.10.1", features = ["alloc"], default-features = false }

[[bench]]
name = "numbers"
harness = false
