[package]
name = "raster_runtime_async_hooks"
description = "raster_runtime Module async_hooks"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_async_hooks"
path = "src/lib.rs"

[dependencies]
raster_runtime_hooking = { version = "0.8.1-beta", path = "../../libs/raster_runtime_hooking" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
rquickjs = { version = "0.11", git = "https://github.com/DelSkayn/rquickjs", default-features = false }
tracing = { version = "0.1", default-features = false }
