[package]
name = "raster_runtime_buffer"
description = "raster_runtime Module buffer"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_buffer"
path = "src/lib.rs"

[dependencies]
itoa = { version = "1", default-features = false }
raster_runtime_encoding = { version = "0.8.1-beta", path = "../../libs/raster_runtime_encoding" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
rquickjs = { version = "0.11", git = "https://github.com/DelSkayn/rquickjs", features = [
  "futures",
], default-features = false }
ryu = { version = "1", default-features = false }

[dev-dependencies]
raster_runtime_test = { path = "../../libs/raster_runtime_test" }
tokio = { version = "1", features = ["full"], default-features = false }
