[package]
name = "raster_runtime_child_process"
description = "raster_runtime Module child_process"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"

[lib]
name = "raster_runtime_child_process"
path = "src/lib.rs"

[dependencies]
itoa = { version = "1", default-features = false }
raster_runtime_buffer = { version = "0.8.1-beta", path = "../raster_runtime_buffer" }
raster_runtime_context = { version = "0.8.1-beta", path = "../../libs/raster_runtime_context" }
raster_runtime_events = { version = "0.8.1-beta", path = "../raster_runtime_events" }
raster_runtime_stream = { version = "0.8.1-beta", path = "../raster_runtime_stream" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
rquickjs = { version = "=0.12.1", default-features = false }
tokio = { version = "1", features = ["process"], default-features = false }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[dev-dependencies]
raster_runtime_test = { path = "../../libs/raster_runtime_test" }
