[package]
name = "raster_runtime_dns"
description = "raster_runtime Module dns"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"
readme = "README.md"

[lib]
name = "raster_runtime_dns"
path = "src/lib.rs"

[dependencies]
either = { version = "1", default-features = false }
raster_runtime_context = { version = "0.8.1-beta", path = "../../libs/raster_runtime_context" }
raster_runtime_hooking = { version = "0.8.1-beta", path = "../../libs/raster_runtime_hooking" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
rquickjs = { version = "=0.12.1", features = [
  "macro",
  "either",
], default-features = false }
tokio = { version = "1", features = ["net"], default-features = false }

[dev-dependencies]
raster_runtime_test = { path = "../../libs/raster_runtime_test" }
tokio = { version = "1", features = [
  "macros",
  "test-util",
], default-features = false }
