[package]
name = "raster_runtime_fetch"
description = "raster_runtime Module fetch"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"
readme = "README.md"

[lib]
name = "raster_runtime_fetch"
path = "src/lib.rs"

[features]
default = ["http1", "http2", "compression-c", "webpki-roots", "tls-ring"]

http1 = ["hyper/http1", "raster_runtime_http/http1"]
http2 = ["hyper/http2", "raster_runtime_http/http2"]

compression-c = ["raster_runtime_compression/all-c"]
compression-rust = ["raster_runtime_compression/all-rust"]

webpki-roots = ["raster_runtime_http/webpki-roots"]
native-roots = ["raster_runtime_http/native-roots"]

tls-ring = ["raster_runtime_http/tls-ring", "raster_runtime_test_tls/tls-ring"]
tls-aws-lc = ["raster_runtime_http/tls-aws-lc", "raster_runtime_test_tls/tls-aws-lc"]
tls-graviola = ["raster_runtime_http/tls-graviola", "raster_runtime_test_tls/tls-graviola"]
tls-openssl = ["raster_runtime_http/tls-openssl", "raster_runtime_test_tls/tls-openssl"]

[dependencies]
bytes = { version = "1", default-features = false }
either = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", features = ["client"], default-features = false }
itoa = { version = "1", default-features = false }
raster_runtime_abort = { version = "0.8.1-beta", path = "../raster_runtime_abort" }
raster_runtime_buffer = { version = "0.8.1-beta", path = "../raster_runtime_buffer" }
raster_runtime_compression = { version = "0.8.1-beta", path = "../../libs/raster_runtime_compression", default-features = false }
raster_runtime_context = { version = "0.8.1-beta", path = "../../libs/raster_runtime_context" }
raster_runtime_encoding = { version = "0.8.1-beta", path = "../../libs/raster_runtime_encoding" }
raster_runtime_http = { version = "0.8.1-beta", default-features = false, path = "../raster_runtime_http" }
raster_runtime_json = { version = "0.8.1-beta", path = "../../libs/raster_runtime_json" }
raster_runtime_url = { version = "0.8.1-beta", path = "../raster_runtime_url" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
raster_runtime_stream_web = { version = "0.8.1-beta", path = "../raster_runtime_stream_web" }
once_cell = { version = "1", features = ["std"], default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
percent-encoding = { version = "2", features = [
  "std",
], default-features = false }
rand = { version = "0.10.1", features = [
  "std",
  "thread_rng",
], default-features = false }
rquickjs = { version = "=0.12.1", default-features = false }
tokio = { version = "1", features = [
  "macros",
  "sync",
], default-features = false }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
raster_runtime_compression = { version = "0.8.1-beta", path = "../../libs/raster_runtime_compression" }
raster_runtime_test = { path = "../../libs/raster_runtime_test" }
raster_runtime_test_tls = { path = "../../libs/raster_runtime_test_tls", default-features = false }
wiremock = { version = "0.6", default-features = false }
