[package]
name = "raster_runtime_fs"
description = "raster_runtime Module fs"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"
readme = "README.md"

[lib]
name = "raster_runtime_fs"
path = "src/lib.rs"

[dependencies]
either = { version = "1", default-features = false }
raster_runtime_buffer = { version = "0.8.1-beta", path = "../raster_runtime_buffer" }
raster_runtime_context = { version = "0.8.1-beta", path = "../../libs/raster_runtime_context" }
raster_runtime_encoding = { version = "0.8.1-beta", path = "../../libs/raster_runtime_encoding" }
raster_runtime_events = { version = "0.8.1-beta", path = "../raster_runtime_events" }
raster_runtime_path = { version = "0.8.1-beta", path = "../raster_runtime_path" }
raster_runtime_url = { version = "0.8.1-beta", path = "../raster_runtime_url" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", features = [
  "fs",
], default-features = false }
notify = "8.2"
rand = { version = "0.10.1", features = [
  "alloc",
  "thread_rng",
], default-features = false }
rquickjs = { version = "=0.12.1", features = ["either"], default-features = false }
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "rt",
  "sync",
], default-features = false }

[target.'cfg(windows)'.dependencies]
junction = "2"

[dev-dependencies]
raster_runtime_test = { path = "../../libs/raster_runtime_test" }
