[package]
name = "raster_runtime_http"
description = "raster_runtime Module http & https"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"
readme = "README.md"

[lib]
name = "raster_runtime_http"
path = "src/lib.rs"

[features]
default = ["http1", "http2", "webpki-roots", "tls-ring"]

http1 = ["hyper/http1", "hyper-rustls?/http1", "hyper-util/http1"]
http2 = ["hyper/http2", "hyper-rustls?/http2", "hyper-util/http2"]

webpki-roots = ["raster_runtime_tls/webpki-roots"]
native-roots = ["raster_runtime_tls/native-roots"]

# TLS crypto backend features (rustls-based)
tls-ring = [
  "http1",
  "raster_runtime_tls/tls-ring",
  "dep:hyper-rustls",
  "hyper-rustls/ring",
  "dep:rustls",
]
tls-aws-lc = [
  "http1",
  "raster_runtime_tls/tls-aws-lc",
  "dep:hyper-rustls",
  "hyper-rustls/aws-lc-rs",
  "dep:rustls",
]
tls-graviola = [
  "http1",
  "raster_runtime_tls/tls-graviola",
  "dep:hyper-rustls",
  "dep:rustls",
]

# OpenSSL TLS backend
tls-openssl = [
  "http1",
  "raster_runtime_tls/tls-openssl",
  "dep:hyper-openssl",
  "dep:openssl",
]

[dependencies]
bytes = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", features = ["client", "server", "http1"], default-features = false }
hyper-util = { version = "0.1", features = [
  "client-legacy",
  "server",
  "tokio",
], default-features = false }
hyper-rustls = { version = "0.27", default-features = false, optional = true }
hyper-openssl = { version = "0.10", features = [
  "client-legacy",
], optional = true }
openssl = { version = "0.10", optional = true }
raster_runtime_dns_cache = { version = "0.8.1-beta", path = "../../libs/raster_runtime_dns_cache" }
raster_runtime_tls = { version = "0.8.1-beta", default-features = false, path = "../raster_runtime_tls" }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils", default-features = false }
raster_runtime_context = { version = "0.8.1-beta", path = "../../libs/raster_runtime_context" }
raster_runtime_events = { version = "0.8.1-beta", path = "../raster_runtime_events" }
raster_runtime_buffer = { version = "0.8.1-beta", path = "../raster_runtime_buffer" }
raster_runtime_net = { version = "0.8.1-beta", path = "../raster_runtime_net" }
once_cell = { version = "1", features = ["std"], default-features = false }
rquickjs = { version = "=0.12.1", features = [
  "either",
  "std",
], default-features = false }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"], default-features = false }
tokio-stream = { version = "0.1", features = ["sync"], default-features = false }
rustls = { version = "0.23", features = [
  "tls12",
], default-features = false, optional = true }

[dev-dependencies]
raster_runtime_test = { path = "../../libs/raster_runtime_test" }
