[package]
name = "raster_runtime_intl"
description = "raster_runtime Intl module - minimal internationalization support"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"
readme = "README.md"

[lib]
name = "raster_runtime_intl"
path = "src/lib.rs"

[dependencies]
itoa = "1.0"
jiff = { version = "0.2" }
rquickjs = { version = "=0.12.1", default-features = false }
raster_runtime_utils = { version = "0.8.1-beta", path = "../../libs/raster_runtime_utils" }
