[package]
name = "raster_runtime_navigator"
description = "raster_runtime Module navigator"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-d-song/raster_runtime"
readme = "README.md"

[lib]
name = "raster_runtime_navigator"
path = "src/lib.rs"

[dependencies]
rquickjs = { version = "0.11", git = "https://github.com/DelSkayn/rquickjs", default-features = false }
